# LibCSpline

./: CMakeLists.txt  README.md
include/: InterCSpline1D.h  InterCSpline2D.h  InterCSpline3D.h
src/: InterCSpline1D.cpp  InterCSpline2D.cpp  InterCSpline3D.cpp  test_CSpline1D.cpp  test_CSpline2D.cpp  test_CSpline3D.cpp
test/: test_CSpline3D.cpp
